--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "^5.7.2"
+	},
+	"dependencies": {
+		"pdf-lib": "^1.17.1",
+		"pdfjs-dist": "^4.10.38"
 	}
 }
