--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"typescript": "^5.7.2"
 	},
 	"dependencies": {
+		"html2pdf.js": "^0.10.2",
 		"pdf-lib": "^1.17.1",
 		"pdfjs-dist": "^4.10.38"
 	}
