Add requirements manifest

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "PDF Writer",
 	"version": "0.10.2",
 	"minAppVersion": "0.15.0",
-	"description": "To write and fill a P.",
+	"description": "To write and fill a PDF.",
 	"author": "Jobelin Kom",
 	"authorUrl": "https://github.com/jkom4",
 	"isDesktopOnly": false
