--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"typescript": "^5.7.2"
 	},
 	"dependencies": {
+		"@cantoo/pdf-lib": "^2.2.4",
 		"dom-manager": "^1.0.0",
 		"html2pdf.js": "^0.10.2",
 		"pdf-lib": "^1.17.1",
